--- a/research/mxgraph-demo/src/convergence/styles/presence.css
+++ b/research/mxgraph-demo/src/convergence/styles/presence.css
@@ -17,6 +17,10 @@
     overflow: auto;
 }
 
+#presence {
+    z-index: 999;
+}
+
 .presence-pane .presence-title {
     font-size: 12px;
     padding: 8px;
