--- a/research/mxgraph-demo/src/styles/grapheditor.css
+++ b/research/mxgraph-demo/src/styles/grapheditor.css
@@ -1,3 +1,25 @@
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+scrollbar-width: thin;
+scrollbar-color: #9c9bf8 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+width: 4px;
+}
+
+*::-webkit-scrollbar-track {
+background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+background-color: #9c9bf8;
+border-radius: 0px;
+border: 1px solid #ffffff;
+}
+
 .geEditor {
 	font-family:Helvetica Neue,Helvetica,Arial Unicode MS,Arial;
 	font-size:10pt;
@@ -10,6 +32,11 @@
 .geMenubarContainer .geItem, .geToolbar .geButton, .geToolbar .geLabel, .geSidebarContainer .geTitle {
 	cursor:pointer !important;
 }
+
+.geSidebarContainer .geTitle {
+	display: none !important;
+}
+
 .geBackgroundPage {
   	-webkit-box-shadow:0px 0px 3px 0px #d9d9d9;
 	-moz-box-shadow:0px 0px 3px 0px #d9d9d9;
@@ -28,6 +55,14 @@
 	right: 0px;
 }
 .geFormatContainer {
+	position: absolute;
+	margin-top: -255px;
+	top: 50% !important;
+
+
+
+	bottom: 20px;
+	height: 510px;
 	background-color: whiteSmoke !important;
 	overflow-x: hidden !important;
 	overflow-y: auto !important;
@@ -321,14 +356,18 @@ div.mxWindow .geButton {
 	background-color: #ebebeb;
 }
 .geSidebarContainer {
-	background:#ffffff;
+	background:#EBEBEB;
 	overflow:hidden;
 	position:absolute;
-	border-top:1px solid #e5e5e5;
+	border:1px solid #B1CBE6;
 	overflow:auto;
+	border-radius: 10px;
+	-webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	-moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 .geSidebar {
-	background:whiteSmoke;
+	background:transparent;
 	border-bottom:1px solid #e5e5e5;
 	padding:5px;
 	_padding:1px;
@@ -420,6 +459,7 @@ div.mxWindow .geButton {
 	background-color: #b3b3b3;
 }
 .geHsplit {
+	display:none;
 	cursor:col-resize;
 	background-color:#e5e5e5;
 	background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAHBAMAAADdS/HjAAAAGFBMVEUzMzP///9tbW1QUFCKiopBQUF8fHxfX1/IXlmXAAAAHUlEQVQImWMQEGAQFWUQFmYQF2cQEmIQE2MQEQEACy4BF67hpEwAAAAASUVORK5CYII=);
@@ -474,7 +514,7 @@ div.mxWindow .geButton {
 	color:rgb(35, 86, 149);
 }
 .geDialogFooter {
-	background:whiteSmoke;
+	background:transparent;
 	white-space:nowrap;
 	text-align:right;
 	box-sizing:border-box;
