--- a/research/mxgraph-demo/src/convergence/styles/chat.css
+++ b/research/mxgraph-demo/src/convergence/styles/chat.css
@@ -1,27 +1,30 @@
 .chat-control {
-    display: inline-block;
+    /* display: inline-block; */
     position: absolute;
-    right: 265px;
-    top: 30px;
-    z-index: 100000;
+    right: 150px;
+    bottom: 33px;
+    z-index: 999;
 }
 
 .chat-badge {
     position: relative;
-    top: -3px;
+    top: -25px;
+    padding-top: 4px;
+    padding-left: 2px;
+    padding-right: 2px;
 
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     display: inline-block;
 
-    font-size: 11px;
+    font-size: 13px;
     text-align: center;
     font-weight: bold;
 
     background: #E20000;
     color: white;
 
-    margin-right: 2px;
+    margin-right: -50px;
     border-radius: 100%;
 
     animation-name: redPulse;
@@ -42,19 +45,23 @@
 
 .chat-icon {
     padding: 2px;
-    color: #004E98;
+    color: #84A9C0;
+}
+
+.chat-icon:hover{
+    color: #627E90;
 }
 
 .chat-icon-open {
-    background: darkgray;
-    color: white;
+    /* background: darkgray; */
+    color: #627E90;
 }
 
 
 .chat-window {
-    position: fixed;
-    bottom: 29px;
-    right: 260px;
+    position: absolute;
+    bottom: 40px;
+    right: 20px;
     width: 250px;
     height: 300px;
 
