--- a/research/mxgraph-demo/src/convergence/styles/presence.css
+++ b/research/mxgraph-demo/src/convergence/styles/presence.css
@@ -5,8 +5,7 @@
 
 .presence-pane {
     font-family: Helvetica Neue,Helvetica,Arial Unicode MS,Arial;
-    border-top: 1px solid #c0c0c0;
-    border-bottom: 1px solid #c0c0c0;
+    border: 1px solid #c0c0c0;
     background: #f5f5f5;
     font-size: 14px;
     position: absolute;
@@ -19,6 +18,7 @@
 
 #presence {
     z-index: 999;
+    top: 0px;
 }
 
 .presence-pane .presence-title {
