--- a/research/mxgraph-demo/src/styles/grapheditor.css
+++ b/research/mxgraph-demo/src/styles/grapheditor.css
@@ -20,6 +20,10 @@ border-radius: 0px;
 border: 1px solid #ffffff;
 }
 
+* {
+	font-family: 'Roboto', sans-serif;
+}
+
 .geEditor {
 	font-family:Helvetica Neue,Helvetica,Arial Unicode MS,Arial;
 	font-size:10pt;
@@ -240,7 +244,22 @@ border: 1px solid #ffffff;
 	text-decoration:none;
 }
 .geMenubarContainer {
-	background-color: transparent !important;
+	background-color:#e5e5e5;
+	border:1px solid #B1CBE6;
+	border-radius: 10px;
+	position: absolute;
+	text-align: center;
+	margin-left: -200px;
+	top: 30px !important;
+	left: 50% !important;
+	z-index: 999;
+	width: 400px;
+	height: 30px !important;
+	overflow: hidden !important;
+	font-size:16px !important;
+	-webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+-moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 .geMenubar {
 	padding:0px 2px 0px 2px;
@@ -269,8 +288,19 @@ border: 1px solid #ffffff;
 	border:1px solid #d5d5d5 !important;
 }
 .geToolbarContainer {
-	background:whiteSmoke;
-	border-bottom:1px solid #e0e0e0;
+	background:#e5e5e5;
+	border:1px solid #B1CBE6;
+	border-radius: 10px;
+	position: absolute;
+	margin-left: -272px;
+	bottom: 40px !important;
+	width: 544px;
+	height: 35px !important;
+	overflow: hidden !important;
+	font-size:12px !important;
+	-webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	-moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 .geSidebarContainer .geToolbarContainer {
 	background:transparent;
