--- a/research/mxgraph-demo/src/styles/grapheditor.css
+++ b/research/mxgraph-demo/src/styles/grapheditor.css
@@ -58,15 +58,14 @@ border: 1px solid #ffffff;
 .gePresenceContainer {
 	right: 0px;
 }
+
 .geFormatContainer {
 	position: absolute;
-	margin-top: -255px;
+	margin-top: -285px;
 	top: 50% !important;
 
-
-
 	bottom: 20px;
-	height: 510px;
+	height: 570px;
 	background-color: whiteSmoke !important;
 	overflow-x: hidden !important;
 	overflow-y: auto !important;
@@ -302,6 +301,15 @@ box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 	-moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
+
+.geFormatContainer .geToolbarContainer{
+	display: block;
+	border: none !important;
+	-webkit-box-shadow: none !important;
+	-moz-box-shadow: none !important;
+	box-shadow: none !important;
+}
+
 .geSidebarContainer .geToolbarContainer {
 	background:transparent;
 	border-bottom:none;
