--- a/research/mxgraph-demo/src/styles/grapheditor.css
+++ b/research/mxgraph-demo/src/styles/grapheditor.css
@@ -20,6 +20,11 @@ border-radius: 0px;
 border: 1px solid #ffffff;
 }
 
+*::-webkit-scrollbar-track {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 * {
 	font-family: 'Roboto', sans-serif;
 }
