--- a/research/mxgraph-demo/src/styles/grapheditor.css
+++ b/research/mxgraph-demo/src/styles/grapheditor.css
@@ -1,4 +1,16 @@
 /* The Modal (background) */
+.modal-control-container {
+	text-align: right;
+	padding-top: 20px;
+	padding-right: 12px;
+}
+
+.modal-close-cross {
+	text-align: right;
+	padding-right: 10px;
+	padding-top: 5px;
+}
+
 .modal {
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
@@ -9,15 +21,19 @@
 	height: 100%; /* Full height */
 	overflow: auto; /* Enable scroll if needed */
 	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	background-color: rgba(255,255,255,0.7); /* Black w/ opacity */
+  }
+
+  .modal-body {
+	padding: 30px 40px 40px 40px;
   }
   
   /* Modal Content/Box */
   .modal-content {
 	background-color: #fefefe;
 	margin: 15% auto; /* 15% from the top and centered */
-	padding: 20px;
-	border: 1px solid #888;
+	border: 1px solid #BBB;
+	box-shadow: 1px 1px 5px 1px #888888;
 	width: 400px; /* Could be more or less, depending on screen size */
 	height: auto;
   }
@@ -26,7 +42,7 @@
   .close {
 	color: #aaa;
 	float: right;
-	font-size: 28px;
+	font-size: 24px;
 	font-weight: bold;
   }
   
