--- a/research/mxgraph-demo/src/convergence/styles/chat.css
+++ b/research/mxgraph-demo/src/convergence/styles/chat.css
@@ -1,15 +1,18 @@
 .chat-control {
-    /* display: inline-block; */
-    position: absolute;
-    right: 150px;
+    display: block;
+    position: inherit;
+    /* position: absolute; */
+
     bottom: 33px;
+    left: -10px;
     z-index: 999;
 }
 
 .chat-badge {
     position: relative;
-    top: -25px;
-    padding-top: 4px;
+    top: -15px;
+    left: 15px;
+    padding-top: 0px;
     padding-left: 2px;
     padding-right: 2px;
 
@@ -24,7 +27,6 @@
     background: #E20000;
     color: white;
 
-    margin-right: -50px;
     border-radius: 100%;
 
     animation-name: redPulse;
@@ -45,49 +47,53 @@
 
 .chat-icon {
     padding: 2px;
-    color: #84A9C0;
+    color: #f4dada;;
+    margin-left: -25px
 }
 
 .chat-icon:hover{
-    color: #627E90;
+    color: #ffffff;
 }
 
 .chat-icon-open {
-    /* background: darkgray; */
-    color: #627E90;
+    color: #f4dada;
 }
 
 
 .chat-window {
+    text-align: left;
     position: absolute;
-    bottom: 40px;
-    right: 20px;
+    bottom: 80px;
+    left: 20px;
     width: 250px;
     height: 300px;
-
+    color: #000;
     background: white;
-    border: 1px solid lightgray;
+    /* border: 1px solid lightgray; */
+    border-radius: 5px;
     z-index: 4000;
     display: flex;
     flex-direction: column;
+    -webkit-box-shadow: 4px 4px 5px -3px rgba(0,0,0,0.54);
+    -moz-box-shadow: 4px 4px 5px -3px rgba(0,0,0,0.54);
+    box-shadow: 4px 4px 5px -3px rgba(0,0,0,0.54);
 }
 
 .chat-window-title {
     text-align: center;
+    padding-top: 9px;
+    border-radius: 5px 5px 0px 0px;
+    color: white;
 
-    border: 1px solid lightgray;
-    color: lightgray;
-
-    background-color: #333;
-    font-size: 11px;
+    background-color: #0D6EFD;
+    font-size: 16px;
     line-height: 20px;
-    height: 20px;
-    text-shadow: 0 -1px 0 #000;
+    height: 40px;
 }
 
 .chat-window-close {
     float: right;
-    margin: 4px 4px 0 0;
+    margin: 2px 9px 0px 0px;
     cursor: pointer;
 }
 
@@ -118,9 +124,10 @@
 }
 
 .chat-input {
-    width: 240px;
+    width: 250px;
     padding: 5px;
     z-index: 4000;
+    border-radius: 0px 0px 5px 5px;
     border-style: solid none none none;
     border-width: 1px;
     border-color: lightgray;
