--- a/research/mxgraph-demo/src/convergence/styles/share.css
+++ b/research/mxgraph-demo/src/convergence/styles/share.css
@@ -1,14 +1,13 @@
 .share-controls {
     display: inline-block;
-    position: absolute;
-    right: 100px;
-    bottom: 35px;
+    position: inherit;
+    margin-bottom: 4px;
     z-index: 99;
-    color: #84A9C0;
+    color: #f4dada;
 }
 
 .share-controls:hover{
-    color: #627E90;
+    color: #ffffff;
 }
 
 .share-controls i {
