--- a/research/mxgraph-demo/src/convergence/styles/presence.css
+++ b/research/mxgraph-demo/src/convergence/styles/presence.css
@@ -21,12 +21,17 @@
     top: 0px;
 }
 .absolute-dropdown {
-    position: relative !important;
+    position: inherit !important;
 }
 
-/* .my-dropdown {
-    z-index: 9999;
-} */
+.placeholder-user {
+    height: 40px;
+}
+
+.absolute-you-user {
+    /* padding-bottom: 40px; */
+    height: 50px;
+}
 
 .presence-pane .presence-title {
     font-size: 12px;
