--- a/research/mxgraph-demo/src/styles/grapheditor.css
+++ b/research/mxgraph-demo/src/styles/grapheditor.css
@@ -11,6 +11,20 @@
 	height: 100%;
 }
 
+.geMenubar > a {
+	padding-left: 20px;
+	text-decoration: none;
+	color: white;
+	opacity: 0.5;
+	padding-top: 3px;
+	font-size: 15px;
+}
+
+.geMenubar > a:hover {
+	color: white;
+	opacity: 0.8;
+}
+
 minidenticon-svg svg {
 	border-radius: 50%;
 	background-color: whitesmoke;
@@ -135,9 +149,17 @@ border-radius: 0px;
 	color:#000000;
 	text-decoration:none;
 }
-.geMenubarContainer, .geToolbarContainer, .geFooterContainer, .gePresenceContainer, .geHsplit, .geVsplit {
+
+.geFooterContainer, .gePresenceContainer, .geHsplit, .geVsplit {
 	overflow:hidden;
 	position:absolute;
+	cursor:default;
+}
+
+.geToolbarContainer {
+	overflow:hidden;
+	position:absolute;
+	right: 60px !important;
 	cursor:default;
 }
 
@@ -399,13 +421,13 @@ box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 	border:1px solid #d5d5d5 !important;
 }
 .geToolbarContainer {
-	background:#e5e5e5;
-	border:1px solid #B1CBE6;
+	background:#FFFFFF;
+	border:1px solid #FFFFFF;
 	border-radius: 3px;
 	position: absolute;
 	margin-left: -272px;
-	bottom: 40px !important;
-	width: 544px;
+	bottom: 20px !important;
+	width: auto;
 	height: 35px !important;
 	overflow: hidden !important;
 	font-size:12px !important;
@@ -432,7 +454,7 @@ box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 .geToolbar {
 	padding:1px 0px 0px 6px;
-	border-top:1px solid #e0e0e0;
+	border-top:1px solid #FFFFFF;
 	-webkit-box-shadow: inset 0 1px 0 0 #fff;
 	-moz-box-shadow: inset 0 1px 0 0 #fff;
 	box-shadow: inset 0 1px 0 0 #fff;
@@ -441,7 +463,7 @@ box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 	float:left;
 	width:1px;
 	height:34px;
-	background:#e5e5e5;
+	background:#FFFFFF;
 	margin-left:6px;
 	margin-right:6px;
 	margin-top:-2px;
@@ -506,7 +528,7 @@ div.mxWindow .geButton {
 	background-color: #ebebeb;
 }
 .geSidebarContainer {
-	background:#EBEBEB;
+	background:#ffffff;
 	overflow:hidden;
 	position:absolute;
 	border:1px solid #B1CBE6;
@@ -517,8 +539,8 @@ div.mxWindow .geButton {
 	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 .geSidebar {
-	background:transparent;
-	border-bottom:1px solid #e5e5e5;
+	background: transparent;
+	border-bottom:1px solid #ffffff;
 	padding:5px;
 	padding-top: 15px;
 	min-height: calc(100vh - 78px);
@@ -528,7 +550,7 @@ div.mxWindow .geButton {
 .geSidebarContainer .geTitle {
 	display:block;
 	font-size:9pt;
-	border-bottom:1px solid #e5e5e5;
+	border-bottom:1px solid #ffffff;
 	font-weight:normal;
 	padding:6px 0px 6px 14px;
 	margin:0px;
