--- a/research/mxgraph-demo/src/styles/grapheditor.css
+++ b/research/mxgraph-demo/src/styles/grapheditor.css
@@ -11,6 +11,15 @@
 	height: 100%;
 }
 
+* {
+	font-weight: 300; 
+	stroke-width: 0.6 !important;
+}
+
+.thin-font {
+	font-weight: 300 !important; 
+}
+
 .hidden {
 	display: none !important;
 }
